fundamentos(notes): improve styles for screens and print

--- a/Fundamentos/PSeint/index.html
+++ b/Fundamentos/PSeint/index.html
@@ -55,7 +55,7 @@ booleano<span class="code-keyword"> = </span><span class="code-boolean">Verdader
     <span class="code-function">Escribir</span> <span class="code-string">"False"</span><span class="code-secondary">;</span>
 <span class="code-keyword">FinSi</span> <span class="code-comment">// output: True</span></div>
 
-    <h2>Switches</h2>
+    <h2 class="salto-pagina">Switches</h2>
 
     <div class="codeblock"><span class="code-keyword">Definir</span> foo <span class="code-keyword">Como</span> <span class="code-type">Entero</span><span class="code-secondary">;</span>
 <span class="code-keyword">Definir</span> bar <span class="code-keyword">Como</span> <span class="code-type">Entero</span><span class="code-secondary">;</span>
@@ -98,7 +98,7 @@ x<span class="code-keyword"> = </span><span class="code-number">0</span><span cl
     x<span class="code-keyword"> = </span>x <span class="code-keyword">+</span> <span class="code-number">1</span><span class="code-secondary">;</span>
 <span class="code-keyword">FinMientras</span> <span class="code-comment">// Output: 0 1 2 3 4</span></div>
 
-    <h3>Do While</h3>
+    <h3 class="salto-pagina">Do While</h3>
 
     <div class="codeblock"><span class="code-keyword">Definir</span> iteracion <span class="code-keyword">Como</span> <span class="code-type">Entero</span><span class="code-secondary">;</span>
 iteracion<span class="code-keyword"> = </span><span class="code-number">0</span><span class="code-secondary">;</span>
@@ -147,7 +147,7 @@ array<span class="code-keyword">[</span><span class="code-number">1</span><span
 
     <h2>Matrices</h2>
 
-    <div class="codeblock"><span class="code-keyword">Definir</span> matrix <span class="code-keyword">Como</span> <span class="code-type">Caracter</span><span class="code-secondary">;</span>
+    <div class="codeblock"><span class="code-keyword">Definir</span> matrix <span class="code-keyword">Como</span> <span class="code-type">Caracter</span><span class="code-secondary">;</span> <span class="code-comment">// Definir en base a los tipos de datos que contiene</span>
 <span class="code-keyword">Dimension</span> matrix<span class="code-keyword">[</span><span class="code-number">3</span><span class="code-secondary">,</span><span class="code-number">3</span><span class="code-keyword">]</span><span class="code-secondary">;</span> <span class="code-comment">// de 0 hasta 2 (n-1)</span>
 
 matrix<span class="code-keyword">[</span><span class="code-number">0</span><span class="code-secondary">,</span><span class="code-number">0</span><span
@@ -184,7 +184,7 @@ matrix<span class="code-keyword">[</span><span class="code-number">2</span><span
 
     <hr />
 
-    <h2>Operadores</h2>
+    <h2 class="salto">Operadores</h2>
 
     <table class="table">
       <thead>
