fix(fundamentos): Correct equality symbol

--- a/Fundamentos/PSeint/index.html
+++ b/Fundamentos/PSeint/index.html
@@ -281,7 +281,7 @@ matrix<span class="code-keyword" >[</span ><span class="code-number">2</span><sp
           </thead>
           <tbody>
             <tr>
-              <td><span class="code-keyword">=</span></td>
+              <td><span class="code-keyword">==</span></td>
               <td>Igualdad</td>
             </tr>
             <tr>
