--- a/Fundamentos/PSeint/index.html
+++ b/Fundamentos/PSeint/index.html
@@ -352,5 +352,8 @@ matrix<span class="code-keyword" >[</span ><span class="code-number">2</span><sp
         </div>
       </div>
     </main>
+    <footer class="text-end text-muted border-top mt-5 pt-2 pe-3">
+      <p>Eduardo Bray &#x1F12F; 2025</p>
+    </footer>
   </body>
 </html>
