--- a/Fundamentos/PSeint/index.html
+++ b/Fundamentos/PSeint/index.html
@@ -49,10 +49,10 @@ foo <span class="code-keyword">=</span> <span class="code-string">"Foo"</span ><
           <h2>Funciones</h2>
 
           <pre><code>
-<span class="code-keyword">SubProceso</span> output <span class="code-keyword">&lt;-</span> <span class="code-function">Bar</span> <span class="code-keyword">(</span>arg<span class="code-keyword">)</span>
+<span class="code-keyword">Funcion</span> output <span class="code-keyword">&lt;-</span> <span class="code-function">Bar</span> <span class="code-keyword">(</span>arg<span class="code-keyword">)</span>
     <span class="code-keyword">Definir</span> output <span class="code-keyword">Como</span> <span class="code-type">Caracter</span><span class="code-secondary">;</span> <span class="code-comment" >// ¡Definir el retorno si no es un argumento!</span>
     output<span class="code-keyword"> = </span>arg<span class="code-secondary">;</span> <span class="code-comment" >// output se retorna automáticamente al terminar la función</span >
-<span class="code-keyword">FinSubProceso</span>
+<span class="code-keyword">FinFuncion</span>
 
 <span class="code-keyword">Proceso</span> <span class="code-function">Main</span>
     <span class="code-keyword">Definir</span> foo <span class="code-keyword">Como</span> <span class="code-type">Caracter</span><span class="code-secondary">;</span>
