--- a/Fundamentos/PSeint/index.html
+++ b/Fundamentos/PSeint/index.html
@@ -3,16 +3,45 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Referencia PSeint (sintaxis)</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
       crossorigin="anonymous"
     />
+    <title>Referencia PSeint (sintaxis)</title>
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
+    <nav class="navbar bg-body-tertiary fixed-top border">
+      <div class="container-fluid">
+        <div class="collapse navbar-collapse" id="navbarToggler">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0"></ul>
+        </div>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarToggler"
+          aria-controls="navbarToggler"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <p
+        <form class="d-flex" role="search">
+          <input
+            class="form-control me-2"
+            type="search"
+            placeholder="Search"
+            aria-label="Search"
+          />
+          <button class="btn btn-outline-primary" type="submit">Search</button>
+        </form>
+      </div>
+    </nav>
+
     <main class="container-lg">
       <h1 class="mt-2 mb-5">
         Referencia PSeint
@@ -21,7 +50,7 @@
 
       <div class="row">
         <div class="col">
-          <h2>Variables y Tipos de Datos</h2>
+          <h2 data-toc="Types">Variables y Tipos de Datos</h2>
 
           <pre><code>
 <span class="code-keyword">Definir</span> foo <span class="code-keyword">Como</span> <span class="code-type">Numero</span><span class="code-secondary">;</span>   <span class="code-comment">// Float: 1, 1.234</span>
@@ -35,7 +64,7 @@
         </div>
 
         <div class="col">
-          <h2>Entrada y Salida</h2>
+          <h2 data-toc="I/O">Entrada y Salida</h2>
 
           <pre><code>
 <span class="code-function">Escribir</span> <span class="code-string">"Foo"</span><span class="code-secondary">;</span>   <span class="code-comment">// Imprime Foo en la pantalla (sin comillas)</span>
@@ -189,7 +218,7 @@ foo<span class="code-keyword">[</span><span class="code-number">1</span><span cl
         </div>
 
         <div class="col">
-          <h3>Pseudo arreglo variable</h3>
+          <h3 data-toc="Arrays (var)">Pseudo arreglo variable</h3>
 
           <pre><code>
 <span class="code-keyword">Definir</span> arraySize <span class="code-keyword">Como</span> <span class="code-type">Entero</span><span class="code-secondary">;</span> <span class="code-comment">// Variable con el tamaño que usaremos del arreglo</span>
@@ -354,7 +383,9 @@ matrix<span class="code-keyword">[</span><span class="code-number">2</span><span
       </div>
     </main>
     <footer class="text-end text-muted border-top mt-5 pt-2 pe-3">
-      <p>Eduardo Bray &#x1F12F; 2025</p>
+      <p>Eduardo Bray <span class="copyleft">&#169;</span> 2025</p>
     </footer>
   </body>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="script.js"></script>
 </html>
