fundamentos(notes): remove fixed-top

--- a/Fundamentos/PSeint/index.html
+++ b/Fundamentos/PSeint/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <nav class="navbar bg-body-tertiary fixed-top border">
+    <nav class="navbar bg-body-tertiary border">
       <div class="container-fluid">
         <div class="collapse navbar-collapse" id="navbarToggler">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0"></ul>
